--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="content-boxes">
           <h2>Where to find me</h2>
-          <a href="www.manuscho.com">Visit my homepage</a>
+          <a href="http://www.manuscho.com">Visit my homepage</a>
           <a href="https://www.linkedin.com/in/manuelscholz" target="_blank"><i class="fab fa-linkedin"></i></a>
           <a href="https://github.com/manuscho"><i class="fab fa-github-square"></i></a>
         </div>
