--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
       <div class="content">
 
-        <img src="/images/profile_picture.jpg" class="invisible">
+        <img src="/images/profile_picture.JPG" class="invisible">
         <div class="content-boxes">
           <h1>Manuel</h1>
           <h2>Digital Meerkat</h2>
